--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ecocheck
+MONGODB_URI=mongodb+srv://ydcbgamingjew90_db_user:Saynotodrugs09@ECOCHECK.mongodb.net/ecocheck?retryWrites=true&w=majority
 JWT_SECRET=your_super_secret_key
+NODE_ENV=production
